--- a/005.html
+++ b/005.html
@@ -79,11 +79,11 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年02月02日15时31分至 2024年02月15日 23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年02月02日18时31分至 2024年02月15日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:瑞和产业园--G228--白云仔收费站--G15沈海高速--凌坑立交--S21广惠高速--G35济广高速--S8广佛肇高速--G15沈海高速--横江立交--G80广昆高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G80广昆高速--梧州西收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:瑞和产业园--G228--白云收费站--G15沈海高速--凌坑立交--S21广惠高速--G35济广高速--S8广佛肇高速--G15沈海高速--横江立交--G80广昆高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G80广昆高速--梧州西收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
