--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:立品辉煌工程机械--G324--G234--罗定机场收费站--S40云茂高速--寻龙立交--S51肇阳高速--莫村立交--G2518深岑高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G2518深岑高速--归义收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:辉煌工程机械--G234--两塘收费站--S51肇阳高速--莫村立交--G2518深岑高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G2518深岑高速--归义收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
