--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:正邦科技园--S119--仙村收费站--G35济广高速--S18花莞高速--G15沈海高速--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:嘉源科技园--开创大道--萝岗收费站--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
