--- a/017.html
+++ b/017.html
@@ -79,11 +79,11 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年03月06日20时15分至 2024年03月19日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年03月06日20时39分至 2024年03月15日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:辉煌工程机械--G228--G207--遂溪收费站--S63玉湛高速--竹园立交--G15沈海高速--东坡岭立交--G75兰海高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--G7511钦东高速--东兴收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:辉煌工程机械--G207--笪桥收费站--S14汕湛高速--林屋立交--G15沈海高速--东坡岭立交--G75兰海高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--G7511钦东高速--东兴收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
