--- a/001.html
+++ b/001.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002024030505211</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，湖南省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2024年03月06日19时08分至 2024年03月15日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:广州市果树科学研究所--中九快速路--知识城北收费站--S45从埔高速--G94珠三角环线高速--G45大广高速--S1广连高速--G0421许广高速--粤湘界；<br><hr><span id="pro">湖南省</span>:湘粤界--G0421许广高速--S31宜连高速--黄沙收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:陂面镇卫生院--坡面收费站--S14汕湛高速--S51肇阳高速--G2518沈岑高速--G80广昆高速--粤桂界；<br><hr><span id="pro">广西省</span>:桂粤界--G80高速--北流收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -104,13 +104,13 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀EQ7285</div></li>
+                    <div class="detail-value" id="vehicleNo">冀ET0058</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
                     <div class="detail-value" id="model">CA4250P66K24T1A1</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车整备质量：</div>
                     <div class="detail-value" id="vehWeight">8.80吨</div></li>                
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀E835N挂</div></li>
+                    <div class="detail-value" id="hanvehicleNo">冀ER206挂</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车厂牌型号：</div>
                     <div class="detail-value" id="hanmodel">LWY9387TDP</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车整备质量：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>湖南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>广西壮族自治区：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
