--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:豆豉鸡产业园--S369--G359--罗平收费站--S40云茂高速--S51肇阳高速--G2518深岑高速--粤桂界；<br><hr><span id="pro">湖南省</span>:桂粤界--G2518深岑高速--岑溪东收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:豆豉鸡产业园--S369--G359--罗平收费站--S40云茂高速---S51肇阳高速--G2518深岑高速--粤桂界；<br><hr><span id="pro">湖南省</span>:桂粤界---G2518深岑高速--岑溪东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
