--- a/007.html
+++ b/007.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:高明更合智城建材--S273--更合东收费站--S5广台高速--G94珠三角环线高速--G55二广高速--G78汕昆高速--粤桂界；<br><hr><span id="pro">江西省</span>:桂粤界--G78汕昆高速--信都收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:高明更合智城建材--S273--更合东收费站--S5广台高速--G94珠三角环线高速--G55二广高速--G78汕昆高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G78汕昆高速--信都收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
